# ecgrep

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: matchfinder.hpp
src/: ecgrep.cpp  matchfinder.cpp
